klab.node/src/main/resources/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: node-service
    app.kubernetes.io/version: 0.10.0-SNAPSHOT
  name: node-service
spec:
  ports:
  - name: http
    port: 8287
    targetPort: 8287
  selector:
    app.kubernetes.io/name: node-service
    app.kubernetes.io/version: 0.10.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.dekorate.io/commit-id: f39b85a568c31bdcb3cae1493d9ad62e45a7e243
    app.dekorate.io/vcs-url: https://bitbucket.org/integratedmodelling/klab.git
  labels:
    app.kubernetes.io/name: node-service
    app.kubernetes.io/version: 0.10.0-SNAPSHOT
  name: node-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: node-service
      app.kubernetes.io/version: 0.10.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.dekorate.io/commit-id: f39b85a568c31bdcb3cae1493d9ad62e45a7e243
        app.dekorate.io/vcs-url: https://bitbucket.org/integratedmodelling/klab.git
      labels:
        app.kubernetes.io/name: node-service
        app.kubernetes.io/version: 0.10.0-SNAPSHOT
    spec:
      serviceAccountName: node-service-account
      imagePullSecrets:
      - name: dpr-secret
      containers:
      - name: node-service
        image: node:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8287
          name: http
          protocol: TCP
      volumes:
      - name: node-service-persistent-storage
        persistentVolumeClaim:
          claimName: node-service-pv-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: node-service
    app.kubernetes.io/version: 0.10.0-SNAPSHOT
  name: node-service
spec:
  rules:
  - host: ""
    http:
      paths:
      - backend:
          serviceName: node-service
          servicePort: 8287
        path: /node
